src/objects/Pieces__c.object
<CustomObject>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <picklist>
            <picklistValues>
                <fullName>Laval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ottawa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Québec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toronto</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <description>Volume (Square Feet) * 100</description>
        <formula>Volume_Square_Feet__c * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Volume (Square Feet) * 100</inlineHelpText>
        <label>Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date_of_Receipt__c</fullName>
        <label>Date of Receipt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Pieces</relationshipLabel>
        <relationshipName>Pieces</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projet_Number__c</fullName>
        <label>Projet Number</label>
        <referenceTo>Projet__c</referenceTo>
        <relationshipLabel>Pieces</relationshipLabel>
        <relationshipName>Pieces</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recieved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recieved By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Contact employé</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pieces (Recieved By)</relationshipLabel>
        <relationshipName>Pieces1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <description>Takes the date of receipt and adds 4 years to it.</description>
        <formula>IF(MONTH( DATEVALUE(Date_of_Receipt__c) )=2 &amp;&amp; DAY(DATEVALUE(Date_of_Receipt__c))=29,
        DATE(YEAR(DATEVALUE(Date_of_Receipt__c))+4, 2, 29),
        DATE(YEAR(DATEVALUE(Date_of_Receipt__c))+4, MONTH(DATEVALUE(Date_of_Receipt__c)), DAY(DATEVALUE(Date_of_Receipt__c)))   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Takes the date of receipt and adds 4 years to it.</inlineHelpText>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sampled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sampled By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Contact employé</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Pieces</relationshipLabel>
        <relationshipName>Pieces</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sampling_Date__c</fullName>
        <label>Sampling Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Before_Sampling__c</fullName>
        <label>Status (Before Sampling)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status_Upon_Receipt__c</fullName>
        <label>Status (Upon Receipt)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Détruite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entreposé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prêté</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rangé</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transféré</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volume_Square_Feet__c</fullName>
        <label>Volume (Square Feet)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Pièce</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Pieces Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pièces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Recieved_By_Check</fullName>
        <active>true</active>
        <description>Checks to make sure &quot;Received By&quot; has a value when there is a &quot;Date of Receipt&quot;.</description>
        <errorConditionFormula>ISBLANK(Recieved_By__c)

&amp;&amp;

NOT(ISBLANK( Date_of_Receipt__c ))</errorConditionFormula>
        <errorDisplayField>Recieved_By__c</errorDisplayField>
        <errorMessage>If &quot;Date of Recept&quot; has a value then &quot;Recieved By&quot; needs to have a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sampled_By_Check</fullName>
        <active>true</active>
        <description>Checks to make sure &quot;Sampled By&quot; has a value when there is a &quot;Sampled Date&quot;.</description>
        <errorConditionFormula>ISBLANK(Sampled_By__c)

&amp;&amp;

NOT(ISBLANK(Sampling_Date__c))</errorConditionFormula>
        <errorDisplayField>Sampled_By__c</errorDisplayField>
        <errorMessage>If &quot;Sampling Date&quot; has a value then &quot;Sampled By&quot; needs to have a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sampling_Receiption_Date_Check</fullName>
        <active>true</active>
        <description>One of &quot;Sampling Date&quot; OR &quot;Date of Receipt&quot; have to have a value.</description>
        <errorConditionFormula>ISBLANK(Sampling_Date__c) 

&amp;&amp;

ISBLANK(Date_of_Receipt__c)</errorConditionFormula>
        <errorMessage>Please make sure either &quot;Date of Receipt&quot; OR &quot;Sampling Date&quot; has a value.</errorMessage>
    </validationRules>
</CustomObject>